new file:   fileDump/GCA_050630565.1_ASM5063056v1_cds_from_genomic.fna.gz 	new file:   fileDump/GCA_050630565.1_ASM5063056v1_genomic.fna.gz 	new file:   fileDump/GCA_050630565.1_ASM5063056v1_genomic.gff.gz 	new file:   fileDump/GCA_050630565.1_ASM5063056v1_rna_from_genomic.fna.gz 	modified:   week1/DATA_AND_WORKFLOW.md 	new file:   week1/images/Screenshot 2026-04-18 173449.png 	new file:   week1/images/Screenshot 2026-04-18 174034.png 	new file:   week1/images/Screenshot 2026-04-18 203711.png 	new file:   week1/images/Screenshot 2026-04-18 204243.png 	new file:   week1/images/Screenshot 2026-04-18 204421.png